unpackaged/main/default/objects/Advisor_Group__c/Advisor_Group__c.object-meta.xml
<CustomObject>
    <label>Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>