unpackaged/main/default/objects/Advisor_Group__c/fields/Accelerator_Loan_Option__c.field-meta.xml
<CustomField>
    <fullName>Accelerator_Loan_Option__c</fullName>
    <label>Accelerator Loan Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>