unpackaged/main/default/objects/Advisor_Group__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Created by CCC(KM) for DAN-197</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>