unpackaged/main/default/objects/Advisor_Group__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <label>Affiliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W2</fullName>
            </value>
            <value>
                <fullName>1099</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>