unpackaged/main/default/objects/Advisor_Group__c/fields/Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Affiliations__c</fullName>
    <label>Affiliations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFPG</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>DWM</fullName>
            </value>
            <value>
                <fullName>DAS / BD</fullName>
            </value>
            <value>
                <fullName>DWM / BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>