unpackaged/main/default/objects/Advisor_Group__c/fields/BD_AUA__c.field-meta.xml
<CustomField>
    <fullName>BD_AUA__c</fullName>
    <label>BD AUA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>