unpackaged/main/default/objects/Advisor_Group__c/fields/BD_Based_Payout__c.field-meta.xml
<CustomField>
    <fullName>BD_Based_Payout__c</fullName>
    <label>BD-Based Payout %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>