unpackaged/main/default/objects/Advisor_Group__c/fields/BD_Payout_Rate__c.field-meta.xml
<CustomField>
    <fullName>BD_Payout_Rate__c</fullName>
    <label>BD Payout Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>