unpackaged/main/default/objects/Advisor_Group__c/fields/Cultural_Fit__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Fit__c</fullName>
    <label>Cultural Fit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>