unpackaged/main/default/objects/Advisor_Group__c/fields/Current_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Current_Affiliation__c</fullName>
    <label>Current Affiliation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Affiliation</valueSetName>
    </valueSet>
</CustomField>