unpackaged/main/default/objects/Advisor_Group__c/fields/Current_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Current_Custodian__c</fullName>
    <label>Current Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>