unpackaged/main/default/objects/Advisor_Group__c/fields/Current_Tech__c.field-meta.xml
<CustomField>
    <fullName>Current_Tech__c</fullName>
    <label>Current Tech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black Diamond</fullName>
            </value>
            <value>
                <fullName>eMoney</fullName>
            </value>
            <value>
                <fullName>MGP</fullName>
            </value>
            <value>
                <fullName>Orion</fullName>
            </value>
            <value>
                <fullName>Redtail</fullName>
            </value>
            <value>
                <fullName>Wealthbox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>