unpackaged/main/default/objects/Advisor_Group__c/fields/Disclosure_Details__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Details__c</fullName>
    <label>Disclosure Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>