unpackaged/main/default/objects/Advisor_Group__c/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chose Another Firm</fullName>
            </value>
            <value>
                <fullName>Compliance / Risk Concern</fullName>
            </value>
            <value>
                <fullName>Cultural / Strategic Fit</fullName>
            </value>
            <value>
                <fullName>Economics / Deal Terms</fullName>
            </value>
            <value>
                <fullName>Insufficient Assets</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Not the Right Time</fullName>
            </value>
            <value>
                <fullName>Platform / Services Fit</fullName>
            </value>
            <value>
                <fullName>Started Own RIA</fullName>
            </value>
            <value>
                <fullName>Stayed with Current Firm</fullName>
            </value>
            <value>
                <fullName>Timing / Not Ready</fullName>
            </value>
            <value>
                <fullName>Went with Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>