unpackaged/main/default/objects/Advisor_Group__c/fields/External_Referrer__c.field-meta.xml
<CustomField>
    <fullName>External_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branches (External Referrer)</relationshipLabel>
    <relationshipName>Branches_External_Referrer</relationshipName>
    <type>Lookup</type>
</CustomField>