unpackaged/main/default/objects/Advisor_Group__c/fields/Fee_Based_Payout__c.field-meta.xml
<CustomField>
    <fullName>Fee_Based_Payout__c</fullName>
    <label>Fee-Based Payout %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>