unpackaged/main/default/objects/Advisor_Group__c/fields/Fee_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fee_Revenue__c</fullName>
    <label>Fee Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>