unpackaged/main/default/objects/Advisor_Group__c/fields/Forgivable_Loan__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan__c</fullName>
    <label>Forgivable Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>