unpackaged/main/default/objects/Advisor_Group__c/fields/Forgivable_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Amount__c</fullName>
    <label>Forgivable Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>