unpackaged/main/default/objects/Advisor_Group__c/fields/Forgivable_Loan_Min_Annual_Production__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Min_Annual_Production__c</fullName>
    <label>Forgivable Loan Min. Annual Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>