unpackaged/main/default/objects/Advisor_Group__c/fields/Forgivable_Loan_Term_in_years__c.field-meta.xml
<CustomField>
    <fullName>Forgivable_Loan_Term_in_years__c</fullName>
    <label>Forgivable Loan Term (in years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>