unpackaged/main/default/objects/Advisor_Group__c/fields/How_You_Manage_Assets__c.field-meta.xml
<CustomField>
    <fullName>How_You_Manage_Assets__c</fullName>
    <label>How You Manage Assets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rep as PM</fullName>
            </value>
            <value>
                <fullName>Asset Manager</fullName>
            </value>
            <value>
                <fullName>Firm Outsourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>