unpackaged/main/default/objects/Advisor_Group__c/fields/IAPD_BrokerCheck__c.field-meta.xml
<CustomField>
    <fullName>IAPD_BrokerCheck__c</fullName>
    <label>IAPD / BrokerCheck</label>
    <type>Url</type>
</CustomField>