unpackaged/main/default/objects/Advisor_Group__c/fields/Integrated_Ops__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Ops__c</fullName>
    <label>Integrated Ops</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>