unpackaged/main/default/objects/Advisor_Group__c/fields/Integrated_Ops_Fee__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Ops_Fee__c</fullName>
    <label>Integrated Ops Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>