unpackaged/main/default/objects/Advisor_Group__c/fields/Internal_Referrer_DRP__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referrer_DRP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referrer (DRP)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Diversify Related Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branches (Internal Referrer)</relationshipLabel>
    <relationshipName>Branches_Internal_Referrer</relationshipName>
    <type>Lookup</type>
</CustomField>