unpackaged/main/default/objects/Advisor_Group__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Center of Influence</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Diversify Advisor Referral</fullName>
            </value>
            <value>
                <fullName>Diversify Team Member Referral</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Existing Client Referral</fullName>
            </value>
            <value>
                <fullName>Former Employee Relationship</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Home Office Referral</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Paid Lead</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Personal Relationship</fullName>
            </value>
            <value>
                <fullName>Personal Relationship - Dave</fullName>
            </value>
            <value>
                <fullName>Personal Relationship - Todd</fullName>
            </value>
            <value>
                <fullName>Professional Association</fullName>
            </value>
            <value>
                <fullName>Professional Partner Referral</fullName>
            </value>
            <value>
                <fullName>Promoter Relationship</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Referral - External</fullName>
            </value>
            <value>
                <fullName>Referral - Internal</fullName>
            </value>
            <value>
                <fullName>Self Sourced List</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Vendor or Sponsor Referral</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Webinar/Seminar Attendee</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Website Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>