unpackaged/main/default/objects/Advisor_Group__c/fields/Main_Growth_Levers__c.field-meta.xml
<CustomField>
    <fullName>Main_Growth_Levers__c</fullName>
    <label>Main Growth Levers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>