unpackaged/main/default/objects/Advisor_Group__c/fields/Membership_Fee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Membership_Fee_Notes__c</fullName>
    <label>Membership Fee Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>