unpackaged/main/default/objects/Advisor_Group__c/fields/Number_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff__c</fullName>
    <label>Number of Staff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>