unpackaged/main/default/objects/Advisor_Group__c/fields/Office_Team_Structure__c.field-meta.xml
<CustomField>
    <fullName>Office_Team_Structure__c</fullName>
    <label>Office / Team Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>