unpackaged/main/default/objects/Advisor_Group__c/fields/Operations_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operations Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Diversify Related Person</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Advisor_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>