unpackaged/main/default/objects/Advisor_Group__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>