unpackaged/main/default/objects/Advisor_Group__c/fields/Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Platform_Fee__c</fullName>
    <label>Platform Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>