unpackaged/main/default/objects/Advisor_Group__c/fields/Portfolio_Management__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Management__c</fullName>
    <label>Portfolio Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>