unpackaged/main/default/objects/Advisor_Group__c/fields/Potential_Service__c.field-meta.xml
<CustomField>
    <fullName>Potential_Service__c</fullName>
    <label>Potential Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RIA 1099</fullName>
            </value>
            <value>
                <fullName>RIA W2</fullName>
            </value>
            <value>
                <fullName>RIA 1099 + BD</fullName>
            </value>
            <value>
                <fullName>RIA W2 + BD</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
                <isActive>false</isActive>
                <label>BD</label>
            </value>
            <value>
                <fullName>Broker Dealer</fullName>
                <isActive>false</isActive>
                <label>Broker Dealer</label>
            </value>
            <value>
                <fullName>Delaware Statutory Trust (DST)</fullName>
                <isActive>false</isActive>
                <label>Delaware Statutory Trust (DST)</label>
            </value>
            <value>
                <fullName>Family Office Service Agreement</fullName>
                <isActive>false</isActive>
                <label>Family Office Service Agreement</label>
            </value>
            <value>
                <fullName>Fee Based Wealth Management</fullName>
                <isActive>false</isActive>
                <label>Fee Based Wealth Management</label>
            </value>
            <value>
                <fullName>Financial Planning</fullName>
                <isActive>false</isActive>
                <label>Financial Planning</label>
            </value>
            <value>
                <fullName>Retirement Planning or ERISA</fullName>
                <isActive>false</isActive>
                <label>Retirement Planning or ERISA</label>
            </value>
            <value>
                <fullName>Tax Services</fullName>
                <isActive>false</isActive>
                <label>Tax Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>