unpackaged/main/default/objects/Advisor_Group__c/fields/Project_Branch__c.field-meta.xml
<CustomField>
    <fullName>Project_Branch__c</fullName>
    <label>Project-Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B101.1_KEY</fullName>
            </value>
            <value>
                <fullName>B102.1_CAL</fullName>
            </value>
            <value>
                <fullName>B103.1_SAN</fullName>
            </value>
            <value>
                <fullName>B103.2_SAN-IND</fullName>
            </value>
            <value>
                <fullName>B104.1_ORM</fullName>
            </value>
            <value>
                <fullName>B104.2_ORM-MFO</fullName>
            </value>
            <value>
                <fullName>B105.1_PRS</fullName>
            </value>
            <value>
                <fullName>B105.2_PRS-IND</fullName>
            </value>
            <value>
                <fullName>B108.2_DWM-IND</fullName>
            </value>
            <value>
                <fullName>B303.1_ASHP</fullName>
            </value>
            <value>
                <fullName>B304.1_BRGE</fullName>
            </value>
            <value>
                <fullName>B305.1_BTLRF</fullName>
            </value>
            <value>
                <fullName>B306.1_CAPTF</fullName>
            </value>
            <value>
                <fullName>B307.1_CIPLF</fullName>
            </value>
            <value>
                <fullName>B308.1_CCWA</fullName>
            </value>
            <value>
                <fullName>B309.1_CC</fullName>
            </value>
            <value>
                <fullName>B311.1_DFPGCD</fullName>
            </value>
            <value>
                <fullName>B313.1_DSTP</fullName>
            </value>
            <value>
                <fullName>B314.1_EVGRN</fullName>
            </value>
            <value>
                <fullName>B315.1_FFC</fullName>
            </value>
            <value>
                <fullName>B316.1_FINF</fullName>
            </value>
            <value>
                <fullName>B317.1_FINR</fullName>
            </value>
            <value>
                <fullName>B319.1_FRMN</fullName>
            </value>
            <value>
                <fullName>B320.1_GLDF</fullName>
            </value>
            <value>
                <fullName>B321.1_GOMC</fullName>
            </value>
            <value>
                <fullName>B322.1_GRCP</fullName>
            </value>
            <value>
                <fullName>B323.1_GRIFFL</fullName>
            </value>
            <value>
                <fullName>B325.1_GRVW</fullName>
            </value>
            <value>
                <fullName>B326.1_GWPH</fullName>
            </value>
            <value>
                <fullName>B330.1_INPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>