unpackaged/main/default/objects/Advisor_Group__c/fields/Required_to_Make_a_Move__c.field-meta.xml
<CustomField>
    <fullName>Required_to_Make_a_Move__c</fullName>
    <label>Required to Make a Move</label>
    <length>255</length>
    <type>Text</type>
</CustomField>