unpackaged/main/default/objects/Advisor_Group__c/fields/Revenue_T12__c.field-meta.xml
<CustomField>
    <fullName>Revenue_T12__c</fullName>
    <label>Revenue (T12)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>