unpackaged/main/default/objects/Advisor_Group__c/fields/Review_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Review_Cadence__c</fullName>
    <label>Review Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>