unpackaged/main/default/objects/Advisor_Group__c/fields/Specialties__c.field-meta.xml
<CustomField>
    <fullName>Specialties__c</fullName>
    <description>Created by CCC(KM) for DAN-197</description>
    <label>Specialties</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Specialties</valueSetName>
    </valueSet>
</CustomField>