unpackaged/main/default/objects/Advisor_Group__c/fields/T12_Other__c.field-meta.xml
<CustomField>
    <fullName>T12_Other__c</fullName>
    <label>T12 Other</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>