unpackaged/main/default/objects/Advisor_Group__c/fields/T12_Planning__c.field-meta.xml
<CustomField>
    <fullName>T12_Planning__c</fullName>
    <label>T12 Planning</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>