unpackaged/main/default/objects/Advisor_Group__c/fields/Target_Transition_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Target_Transition_Insurance__c</fullName>
    <label>Target Transition Insurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>