unpackaged/main/default/objects/Advisor_Group__c/fields/Total_AUA__c.field-meta.xml
<CustomField>
    <fullName>Total_AUA__c</fullName>
    <label>Total AUA</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>