unpackaged/main/default/objects/Advisor_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affiliations__c</columns>
    <columns>Operations_Contact__c</columns>
    <columns>Total_Assets__c</columns>
    <columns>Total_Revenue__c</columns>
    <columns>Review_Cadence__c</columns>
    <columns>Next_Review_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>