unpackaged/main/default/objects/Advisor_Group__c/listViews/Branch_Leads.listView-meta.xml
<ListView>
    <fullName>Branch_Leads</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Next_Review_Date__c</columns>
    <columns>Grade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Branch Leads</label>
</ListView>